/***********************************************************************
X3 ChangeLog

2008-12-06  Alex Schumann  <rubin@afternet.org>

	src/modcmd.c: remove python tests (moved to mod-python.c)

	src/mod-python.c: initial template based on memoserv

2008-11-12  Matthew Beeching  <jobe@mdbnet.co.uk>

	* tools/db.php: Added sample DB parser script

2008-11-06  Alex Schumann  <rubin@afternet.org>

	src/modcmd.c,Makefile.in,src/Makefile.in,configure.in,src/config.h.in:
	Begin work on embedding python.

2008-11-06  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/proto-p10.c: Fixes for SGLINE and SSHUN. As well as a fix for
	bug 2173687 (PRIVS part of it is already fixed on trunk).

2008-10-24  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.help: Minor spelling mistake "change" instead of
	"change"

2008-10-10  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/opserv.c: Fix for crash on OpServ SVSPART where the
	channel specified does not exist.

2008-09-30  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Prevent automatic registration of dissallowed
	nicks when registering an account

2008-09-27  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.c: Fix for <trigger>shoot telling you to use
	 .roulette instead of <trigger>roulette

2008-09-15  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/proto-p10.c: SGLINE and SSHUN support some stuff coming
	soon in Nefarious.

2008-09-07  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.c: Changed PEON to PAL

	* src/chanserv.help: Changed PEON to PAL

	* src/modcmd.c: Changed PEON to PAL

	* docs/access-levels.txt: Changed PEON to PAL

	* languages/de/chanserv.help: Changed PEON to PAL

	* languages/en_GB/chanserv.help: Changed PEON to PAL

2008-09-06  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Added new PRIV_*'s to privtab

	* src/mod-snoop.c: Added support for channel mode +h

	* src/hash.h: #define's for missing PRIV_*'s

2008-09-02  Neil Spierling  <sirvulcan@sirvulcan.co.nz>
