@@ -1,0 +1,10 @@
+#!/usr/bin/python
+
+print "This is mod-python.py"
+
+def handle_init():
+    print "This is x3init in python"
+
+def handle_join():
+    print "This is handle_join() in python"
+
