@@ -1,6 +1,12 @@
 /***********************************************************************
 X3 ChangeLog
 
+2008-14-06  Alex Schumann  <rubin@afternet.org>
+
+	src/mod-python.c: further work on building basic bits of this
+
+	src/mod-python.py: first pass at what will be the base python script.
+
 2008-12-06  Alex Schumann  <rubin@afternet.org>
 
 	src/modcmd.c: remove python tests (moved to mod-python.c)
